[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-hallucination-firewall"
version = "0.2.0"
description = "A verification proxy that validates AI-generated code against real sources"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Trần Hoàng Tú" },
]
keywords = ["ai", "hallucination", "code-validation", "llm", "static-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "jedi>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
firewall = "hallucination_firewall.cli:main"

[project.urls]
Repository = "https://github.com/tranhoangtu-it/AI-Hallucination-Firewall"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.hatch.build.targets.wheel]
packages = ["src/hallucination_firewall"]
